[tool.poetry]
name = "imserv"
version = "0.1.4"
description = "Spin an image server, store images from Clipboard in single place, and prevent duplication."
authors = ["Pacharapol Withayasakpunt <patarapolw@gmail.com>"]
repository = 'https://github.com/patarapolw/imserv'
homepage = 'https://github.com/patarapolw/imserv'

[tool.poetry.dependencies]
python = "*"
sqlalchemy = "^1.2"
nonrepeat = "^0.1.1"
flask = "^1.0"
python-slugify = "^1.2"
send2trash = "^1.5"
imagehash = "^4.0"
jupyter = "^1.0"
notebook = "^5.6"
sqlalchemy-citext = "^1.3"
psycopg2 = "^2.7"
psycopg2-binary = "^2.7"
pillow = "^5.2"

[tool.poetry.dev-dependencies]
