[tool.poetry]
name = "imserv"
version = "0.1.6.1"
description = "Spin an image server, store images from Clipboard in single place, and prevent duplication."
authors = ["Pacharapol Withayasakpunt <patarapolw@gmail.com>"]
repository = 'https://github.com/patarapolw/imserv'
homepage = 'https://github.com/patarapolw/imserv'
readme = 'README.md'

[tool.poetry.dependencies]
python = "*"
sqlalchemy = "^1.2"
nonrepeat = "^0.1.1"
flask = "^1.0"
python-slugify = "^1.2"
imagehash = "^4.0"
jupyter = "^1.0"
notebook = "^5.6"
psycopg2 = "^2.7"
psycopg2-binary = "^2.7"
pillow = "^5.2"
tqdm = "^4.26"
watchdog = "^0.9.0"
send2trash = {git = "https://github.com/acheronfail/send2trash.git", branch = "fix/trash-put-back-macos"}

[tool.poetry.dev-dependencies]
